samples/_failures_safe/1761651076_c0d93f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5cb27dee.c: In function ‘main’:
./samples/SAFE/__tmp_5cb27dee.c:140:21: error: expected ‘;’ at end of input
  140 |     print_buffer_hex
      |                     ^
      |                     ;
./samples/SAFE/__tmp_5cb27dee.c:140:5: error: expected declaration or statement at end of input
  140 |     print_buffer_hex
      |     ^~~~~~~~~~~~~~~~
